--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Git</title>
 </head>
     <body>
-        <h1>
-            Hola Mundo
-        </h1>    
+        <div class="container">
+            <h2>Barrio Valentina</h2>
+        </div>
     </body>
 </html>
