--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Git</title>
 </head>
     <body>
+        <header>
+            <h1>header</h1>
+        </header>
         <div class="container">
             <h2>Barrio Valentina</h2>
         </div>
