--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 </head>
     <body>
         <header>
-            <h1>header</h1>
+            <h1>Experimento</h1>
         </header>
         <div class="container">
             <h2>Barrio Valentina</h2>
         </div>
+        <footer>
+            <p>este es un experimento en git rama
+            </p>
+        </footer>
     </body>
 </html>
