Agrego parrafo al index

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <body>
         <header>
             <h1>Experimento</h1>
+            <p>Haciendo cambios en el archivo</p>
         </header>
         <div class="container">
             <h2>Barrio Valentina</h2>
         </div>
         <footer>
-            <p>este es un experimento en git rama
-            </p>
+            <p>este es un experimento en git rama </p>
         </footer>
     </body>
 </html>
